# bp-pa

./: CMakeLists.txt
docs/: sts_io.md
include/: card.h  game.h  random.h  sts_io.h
src/: card.c  game.c  main.c  random.c  sts_io.c
tests/: test_card.c  test_deck.c
